<resources>
    <string name="app_name">RappiApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_fragment">Please, enter your email address. You will receive a link to create a new password via email.</string>
    <string name="email">Email</string>
    <string name="send">SEND</string>
    <string name="check_your_email">Check your email</string>
    <string name="search_question">What do you want today?</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="title">Oops</string>
    <string name="supporting_text">Are you sure you want to empty your cart?</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>

</resources>